home.log

Collecting usage statistics. To deactivate, set browser.gatherUsageStats to False.


  You can now view your Streamlit app in your browser.

  URL: http://0.0.0.0:8501

2025-12-31 18:25:42.552 Uncaught app exception
Traceback (most recent call last):
  File "/usr/local/python/3.12.1/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 535, in _run_script
    exec(code, module.__dict__)
  File "/workspaces/iLuminara-Core/Home.py", line 20, in <module>
    from core.state.sovereign_bus import bus
  File "/workspaces/iLuminara-Core/core/state/sovereign_bus.py", line 22
    with open(self.state_file, 'w') as f:
    ^^^^
IndentationError: expected an indented block after 'if' statement on line 21
